# ulysses-senteval

./: .gitignore  README.md  pyproject.toml
ulysses_senteval/: __init__.py  api.py  assets.py  cache.py  stats.py  train.py  utils.py
